# Modules.py

Amazing/: Makefile  config.txt  parser.py
Day00/ex1/: ft_plot_area.py
Day00/ex2/: ft_harvest_total.py
Day00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Day00/ex6/: ft_garden_summary.py
Day01/ex0/: ft_garden_intro.py
Day01/ex2/: ft_plant_growth.py
Day01/ex3/: ft_plant_factory.py
Day01/ex4/: ft_garden_security.py
Day01/ex5/:  ft_plant_types.py
Day01/ex6/: ft_garden_analytics.py
Day02/ex0/: ft_first_exception.py
Day02/ex1/: ft_different_errors.py
Day02/ex2/: ft_custom_errors.py
Day02/ex3/:  ft_finally_block.py
Day02/ex4/: ft_raise_errors.py
Day02/ex5/: ft_garden_management.py
Day03/Ex5/: ft_data_stream.py
Day03/Ex6/: ft_analytics_dashboard.py
Day03/ex4/:  ft_inventory_system.py
Day03/ex5/: ft_data_stream.py
Day04/Ex0/: ft_ancient_text.py
Day04/Ex3/:  ft_vault_security.py
Day04/Ex4/: ft_crisis_response.py
Day04/ex0/: ft_ancient_text.py
Day04/ex1/:  ft_archive_creation.py
Day04/ex2/: ft_stream_management.py
Day05/: test.py
Day05/Ex0/:  stream_processor.py
Day05/ex0/:  stream_processor.py
Day05/ex1/:  data_stream.py
Day05/ex2/:  nexus_pipeline.py
Day06/:  ft_import_transmutation.py   ft_pathway_debate.py  ft_circular_curse.py  ft_sacred_scroll.py
Day06/alchemy/: __init__.py  potions.py
Day07/ex0/: Card.py  CreatureCard.py  main.py
Day07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
Day08/ex1/: loading.py  pyproject.toml  requirements.txt
Days03/: test.py  test2.py
(+33 files in other folders)
